--- a/index.html
+++ b/index.html
@@ -6,22 +6,14 @@
   <title>Devanandan</title>
   <meta name="description" content="Devanandan, 2nd Year BSMS Biology Student at IISER Thiruvananthapuram. Portfolio showcasing education, skills, and projects.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <!-- Font Awesome (for icons) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <!-- AOS (Animate On Scroll) CSS -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Loader (Optional) -->
-  <div class="loader"></div>
-
   <!-- Header -->
-  <header class="header glass">
-    <div class="container">
-      <h1 class="logo">Devanandan</h1>
+  <header class="header">
+    <div class="container nav-container">
+      <div class="logo">Devanandan</div>
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="#about" class="nav-link">About</a></li>
@@ -31,73 +23,60 @@
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
       </nav>
-      <button id="darkModeToggle" class="dark-toggle" aria-label="Toggle dark mode">
-        <i class="fa-solid fa-moon"></i>
-      </button>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" data-aos="fade-up">
-    <div class="container">
-      <div class="hero-content">
-        <img src="your-photo.jpg" alt="Devanandan" class="hero-photo">
-        <h1 class="hero-title"></h1>
-        <p class="hero-subtitle">2nd Year BSMS Biology Student at IISER Thiruvananthapuram</p>
+  <section class="hero">
+    <div class="container hero-container">
+      <img src="your-photo.jpg" alt="Devanandan" class="hero-photo">
+      <div>
+        <h1 class="hero-title">Exploring Life at the Molecular Level</h1>
+        <p class="hero-subtitle">2nd Year BSMS Biology Student, IISER Thiruvananthapuram</p>
         <p class="hero-description">
-          Passionate about genetics, molecular biology, and scientific research. Exploring the intersection of biology and technology to understand life at the molecular level.
+          Passionate about genetics, molecular biology, and scientific research. I enjoy bridging biology and technology to uncover the secrets of life.
         </p>
       </div>
     </div>
   </section>
 
   <!-- About Section -->
-  <section id="about" class="section" data-aos="fade-up">
+  <section id="about" class="section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">About</h2>
-      </div>
-      <div class="about-content">
-        <div class="about-text">
-          <p>I am a dedicated biology student at IISER Thiruvananthapuram, driven by curiosity about the fundamental mechanisms of life. My academic journey combines rigorous scientific training with hands-on research experience.</p>
-          <p>My interests span across genetics and molecular biology, where I explore how biological systems function at the cellular and molecular levels. I believe in the power of interdisciplinary approaches, incorporating computational tools and programming to enhance biological research.</p>
-          <p>Through my studies, I've developed strong analytical skills and a methodical approach to problem-solving, essential for tackling complex biological questions and contributing meaningful insights to the scientific community.</p>
-        </div>
-      </div>
+      <h2 class="section-title">About Me</h2>
+      <p class="about-text">
+        I am a dedicated student with a deep curiosity for how living systems work. My academic path at IISER Thiruvananthapuram combines rigorous coursework with hands-on research, especially in genetics and molecular biology. I thrive on interdisciplinary challenges and am always eager to apply computational tools to biological questions.
+      </p>
     </div>
   </section>
 
   <!-- Education Section -->
-  <section id="education" class="section section-alt" data-aos="fade-up">
+  <section id="education" class="section section-alt">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">Education</h2>
-      </div>
+      <h2 class="section-title">Education</h2>
       <div class="education-grid">
-        <article class="education-card glass">
+        <article class="education-card">
           <div class="education-period">2023 – Present</div>
-          <h3 class="education-degree">Bachelor & Master of Science in Biology</h3>
-          <p class="education-institution">Indian Institute of Science Education and Research (IISER), Thiruvananthapuram</p>
-          <p class="education-description">Integrated BS-MS program focusing on comprehensive biological sciences education, including molecular biology, genetics, biochemistry, and advanced research methodologies.</p>
+          <h3 class="education-degree">BS-MS in Biology</h3>
+          <p class="education-institution">IISER Thiruvananthapuram</p>
+          <p class="education-description">Integrated program with a focus on molecular biology, genetics, and research methodologies.</p>
         </article>
-        <article class="education-card glass">
+        <article class="education-card">
           <div class="education-period">2023</div>
-          <h3 class="education-degree">Higher Secondary Education</h3>
+          <h3 class="education-degree">Higher Secondary</h3>
           <p class="education-institution">Kendriya Vidyalaya No. 1, Calicut</p>
-          <p class="education-description">Completed Class XII with strong foundation in science subjects, preparing for advanced studies in biological sciences and research.</p>
+          <p class="education-description">Class XII, Science stream. Foundation for advanced studies in biology and research.</p>
         </article>
       </div>
     </div>
   </section>
 
-  <!-- Skills Section -->
-  <section id="skills" class="section" data-aos="fade-up">
+  <!-- Skills Section (only Programming and Research) -->
+  <section id="skills" class="section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">Skills & Expertise</h2>
-      </div>
+      <h2 class="section-title">Skills & Interests</h2>
       <div class="skills-grid">
-        <div class="skill-category glass">
+        <div class="skill-category">
           <h3 class="skill-category-title">Programming</h3>
           <div class="skill-list">
             <span class="skill-item">C</span>
@@ -105,26 +84,10 @@
             <span class="skill-item">MATLAB</span>
           </div>
         </div>
-        <div class="skill-category glass">
-          <h3 class="skill-category-title">Laboratory</h3>
+        <div class="skill-category">
+          <h3 class="skill-category-title">Research</h3>
           <div class="skill-list">
-            <span class="skill-item">Lab Techniques</span>
-            <span class="skill-item">Scientific Observation</span>
-            <span class="skill-item">Data Analysis</span>
-          </div>
-        </div>
-        <div class="skill-category glass">
-          <h3 class="skill-category-title">Core Competencies</h3>
-          <div class="skill-list">
-            <span class="skill-item">Critical Thinking</span>
-            <span class="skill-item">Time Management</span>
-            <span class="skill-item">Research Methodology</span>
-          </div>
-        </div>
-        <div class="skill-category glass">
-          <h3 class="skill-category-title">Research Interests</h3>
-          <div class="skill-list">
-            <span class="skill-item">Genetics</span>
+            <span class="skill-item skill-item-genetics">Genetics</span>
             <span class="skill-item">Molecular Biology</span>
             <span class="skill-item">Biomedical Research</span>
           </div>
@@ -134,40 +97,33 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="section section-alt" data-aos="fade-up">
+  <section id="projects" class="section section-alt">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">Projects</h2>
-      </div>
+      <h2 class="section-title">Projects</h2>
       <div class="projects-content">
-        <div class="projects-placeholder glass">
+        <div class="projects-placeholder">
           <h3>Research in Progress</h3>
-          <p>Currently developing research projects in molecular biology and genetics. This section will be updated with completed work and ongoing research initiatives as I advance through my academic program.</p>
-          <p>Focus areas include computational biology applications, laboratory research methodologies, and interdisciplinary approaches to biological problems.</p>
+          <p>Developing projects in molecular biology and genetics. Updates will be added as my academic journey progresses.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="section" data-aos="fade-up">
+  <section id="contact" class="section">
     <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">Get in Touch</h2>
-      </div>
+      <h2 class="section-title">Contact</h2>
       <div class="contact-grid">
-        <div class="contact-card glass">
-          <h3 class="contact-title"><i class="fa-solid fa-envelope"></i> Email</h3>
+        <div class="contact-card">
+          <h3 class="contact-title">Email</h3>
           <a href="mailto:youremail@iisertvm.ac.in" class="contact-link">youremail@iisertvm.ac.in</a>
-          <p class="contact-description">For academic discussions, collaboration opportunities, or research inquiries.</p>
         </div>
-        <div class="contact-card glass">
-          <h3 class="contact-title"><i class="fa-brands fa-linkedin"></i> LinkedIn</h3>
+        <div class="contact-card">
+          <h3 class="contact-title">LinkedIn</h3>
           <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="contact-link">linkedin.com/in/yourprofile</a>
-          <p class="contact-description">Connect professionally and stay updated on my academic journey.</p>
         </div>
-        <div class="contact-card glass">
-          <h3 class="contact-title"><i class="fa-solid fa-building-columns"></i> Institution</h3>
+        <div class="contact-card">
+          <h3 class="contact-title">Institution</h3>
           <div class="contact-address">
             <p>IISER Thiruvananthapuram</p>
             <p>School of Biology</p>
@@ -180,72 +136,44 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer glass">
+  <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Devanandan. Designed for academic and professional networking.</p>
+      <p>&copy; 2025 Devanandan. Academic & Professional Portfolio.</p>
     </div>
   </footer>
 
-  <!-- Back to Top Button -->
-  <a href="#" class="back-to-top" aria-label="Back to top"><i class="fa-solid fa-arrow-up"></i></a>
-  <!-- Floating Contact Button -->
-  <a href="#contact" class="fab-contact" aria-label="Contact"><i class="fa-solid fa-envelope"></i></a>
+  <!-- DNA Fluid Graphic (for Genetics hover) -->
+  <div id="dna-graphic" class="dna-graphic">
+    <svg width="180" height="60" viewBox="0 0 180 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <ellipse cx="90" cy="30" rx="80" ry="25" fill="#a3c9f9" fill-opacity="0.6" filter="url(#blur)"/>
+      <path d="M20,30 Q60,10 100,30 Q140,50 160,30" stroke="#0073e6" stroke-width="3" fill="none"/>
+      <path d="M20,30 Q60,50 100,30 Q140,10 160,30" stroke="#0073e6" stroke-width="3" fill="none"/>
+      <defs>
+        <filter id="blur">
+          <feGaussianBlur stdDeviation="8"/>
+        </filter>
+      </defs>
+    </svg>
+  </div>
 
-  <!-- Scripts -->
-  <!-- AOS JS -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <!-- Typed.js for typing animation -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <!-- Script for DNA hover effect -->
   <script>
-    // Loader
-    window.addEventListener('load', () => {
-      document.querySelector('.loader').style.display = 'none';
-    });
+    const geneticsSkill = document.querySelector('.skill-item-genetics');
+    const dnaGraphic = document.getElementById('dna-graphic');
 
-    // AOS Animation
-    AOS.init({
-      once: true,
-      duration: 800,
-      offset: 60,
-    });
-
-    // Typed.js for hero title
-    new Typed('.hero-title', {
-      strings: ["Devanandan", "Biology Student", "Aspiring Researcher"],
-      typeSpeed: 80,
-      backSpeed: 40,
-      backDelay: 1500,
-      loop: true,
-      showCursor: true,
-    });
-
-    // Back to Top Button
-    const backToTop = document.querySelector('.back-to-top');
-    window.addEventListener('scroll', () => {
-      if (window.pageYOffset > 300) {
-        backToTop.classList.add('visible');
-      } else {
-        backToTop.classList.remove('visible');
-      }
-    });
-
-    // Dark Mode Toggle
-    const darkToggle = document.getElementById('darkModeToggle');
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    if (localStorage.getItem('theme') === 'dark' || (!localStorage.getItem('theme') && prefersDark)) {
-      document.body.classList.add('dark-mode');
-      darkToggle.innerHTML = '<i class="fa-solid fa-sun"></i>';
+    if (geneticsSkill && dnaGraphic) {
+      geneticsSkill.addEventListener('mouseenter', (e) => {
+        const rect = geneticsSkill.getBoundingClientRect();
+        dnaGraphic.style.left = (rect.left + window.scrollX - 40) + 'px';
+        dnaGraphic.style.top = (rect.top + window.scrollY - 40) + 'px';
+        dnaGraphic.style.opacity = 1;
+        dnaGraphic.style.transform = 'scale(1)';
+      });
+      geneticsSkill.addEventListener('mouseleave', () => {
+        dnaGraphic.style.opacity = 0;
+        dnaGraphic.style.transform = 'scale(0.95)';
+      });
     }
-    darkToggle.onclick = function() {
-      document.body.classList.toggle('dark-mode');
-      if(document.body.classList.contains('dark-mode')){
-        localStorage.setItem('theme', 'dark');
-        darkToggle.innerHTML = '<i class="fa-solid fa-sun"></i>';
-      } else {
-        localStorage.setItem('theme', 'light');
-        darkToggle.innerHTML = '<i class="fa-solid fa-moon"></i>';
-      }
-    };
   </script>
 </body>
 </html>
