--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <ul class="nav-list">
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#education" class="nav-link">Education</a></li>
-          <li><a href="#skills" class="nav-link">Skills</a></li>
           <li><a href="#projects" class="nav-link">Projects</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
@@ -28,9 +27,10 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container hero-container">
-      <img src="your-photo.jpg" alt="Devanandan" class="hero-photo">
+      <img src="your-photo.jpg" alt="Devanandan K C" class="hero-photo">
       <div>
-        <h1 class="hero-title">Exploring Life at the Molecular Level</h1>
+        <h1 class="hero-name">Devanandan K C</h1>
+        <h2 class="hero-title">Exploring Life at the Molecular Level</h2>
         <p class="hero-subtitle">2nd Year BSMS Biology Student, IISER Thiruvananthapuram</p>
         <p class="hero-description">
           Passionate about genetics, molecular biology, and scientific research. I enjoy bridging biology and technology to uncover the secrets of life.
@@ -70,51 +70,6 @@
             <h3 class="education-degree">Higher Secondary</h3>
             <p class="education-institution">Kendriya Vidyalaya No. 1, Calicut</p>
             <p class="education-description">Class XII, Science stream. Foundation for advanced studies in biology and research.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Skills Section with Animated Bars -->
-  <section id="skills" class="section">
-    <div class="container">
-      <h2 class="section-title">Skills & Interests</h2>
-      <div class="skills-bar-grid">
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">C</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill" data-width="80"></div>
-          </div>
-        </div>
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">C++</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill" data-width="75"></div>
-          </div>
-        </div>
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">MATLAB</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill" data-width="70"></div>
-          </div>
-        </div>
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">Genetics</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill skill-item-genetics" data-width="90"></div>
-          </div>
-        </div>
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">Molecular Biology</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill" data-width="85"></div>
-          </div>
-        </div>
-        <div class="skill-bar-block">
-          <div class="skill-bar-label">Biomedical Research</div>
-          <div class="skill-bar-bg">
-            <div class="skill-bar-fill" data-width="60"></div>
           </div>
         </div>
       </div>
@@ -168,20 +123,6 @@
     </div>
   </footer>
 
-  <!-- DNA Fluid Graphic for Genetics Hover -->
-  <div id="dna-graphic" class="dna-graphic">
-    <svg width="180" height="60" viewBox="0 0 180 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <ellipse cx="90" cy="30" rx="80" ry="25" fill="#a3c9f9" fill-opacity="0.6" filter="url(#blur)"/>
-      <path d="M20,30 Q60,10 100,30 Q140,50 160,30" stroke="#0073e6" stroke-width="3" fill="none"/>
-      <path d="M20,30 Q60,50 100,30 Q140,10 160,30" stroke="#0073e6" stroke-width="3" fill="none"/>
-      <defs>
-        <filter id="blur">
-          <feGaussianBlur stdDeviation="8"/>
-        </filter>
-      </defs>
-    </svg>
-  </div>
-
   <!-- Scripts -->
   <script>
     // Animated Page Transition
@@ -189,32 +130,6 @@
     window.addEventListener('beforeunload', function () {
       document.body.classList.remove('fade-in');
     });
-
-    // Animated Skill Bars
-    function animateSkillBars() {
-      document.querySelectorAll('.skill-bar-fill').forEach(bar => {
-        const width = bar.getAttribute('data-width');
-        bar.style.width = width + '%';
-      });
-    }
-    window.addEventListener('DOMContentLoaded', animateSkillBars);
-
-    // DNA hover effect for Genetics
-    const geneticsSkill = document.querySelector('.skill-item-genetics');
-    const dnaGraphic = document.getElementById('dna-graphic');
-    if (geneticsSkill && dnaGraphic) {
-      geneticsSkill.addEventListener('mouseenter', (e) => {
-        const rect = geneticsSkill.getBoundingClientRect();
-        dnaGraphic.style.left = (rect.left + window.scrollX - 40) + 'px';
-        dnaGraphic.style.top = (rect.top + window.scrollY - 70) + 'px';
-        dnaGraphic.style.opacity = 1;
-        dnaGraphic.style.transform = 'scale(1)';
-      });
-      geneticsSkill.addEventListener('mouseleave', () => {
-        dnaGraphic.style.opacity = 0;
-        dnaGraphic.style.transform = 'scale(0.95)';
-      });
-    }
 
     // Visitor Counter (using countapi.xyz)
     fetch('https://api.countapi.xyz/hit/devanandan-portfolio/visits')
@@ -225,6 +140,24 @@
       .catch(() => {
         document.getElementById('visits').textContent = 'N/A';
       });
+
+    // Animate timeline items on scroll
+    function animateTimeline() {
+      const items = document.querySelectorAll('.timeline-item');
+      const triggerBottom = window.innerHeight * 0.85;
+
+      items.forEach(item => {
+        const itemTop = item.getBoundingClientRect().top;
+        if (itemTop < triggerBottom) {
+          item.classList.add('visible');
+        } else {
+          item.classList.remove('visible');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', animateTimeline);
+    window.addEventListener('load', animateTimeline);
   </script>
 </body>
 </html>
