--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
-            <div class="education-period">2023 – Present</div>
+            <div class="education-period">2024 – Present</div>
             <h3 class="education-degree">BS-MS in Biology</h3>
             <p class="education-institution">IISER Thiruvananthapuram</p>
             <p class="education-description">Integrated program with a focus on molecular biology, genetics, and research methodologies.</p>
@@ -96,11 +96,11 @@
       <div class="contact-grid">
         <div class="contact-card">
           <h3 class="contact-title">Email</h3>
-          <a href="mailto:youremail@iisertvm.ac.in" class="contact-link">youremail@iisertvm.ac.in</a>
+          <a href="mailto:youremail@iisertvm.ac.in" class="contact-link">devanandan24@iisertvm.ac.in</a>
         </div>
         <div class="contact-card">
           <h3 class="contact-title">LinkedIn</h3>
-          <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="contact-link">linkedin.com/in/yourprofile</a>
+          <a href="linkedin.com/in/devanandan-kc-56450331b" target="_blank" rel="noopener noreferrer" class="contact-link">linkedin.com/in/yourprofile</a>
         </div>
         <div class="contact-card">
           <h3 class="contact-title">Institution</h3>
